--- a/package.json
+++ b/package.json
@@ -32,8 +32,12 @@
   ],
   "author": "openorson<openorson@hotmail.com>",
   "license": "ISC",
+  "dependencies": {
+    "validator": "^13.11.0"
+  },
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "@types/validator": "^13.11.1",
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
     "vite-plugin-dts": "^3.5.3"
