--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
   "name": "expr-validator",
-  "type": "module",
   "version": "0.0.0",
+  "type": "module",
   "description": "一个通过字符串表达式进行数据验证的库",
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/expr-validator.umd.cjs",
-  "module": "./dist/expr-validator.js",
-  "types": "./dist/expr-validator.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/expr-validator.js",
-      "require": "./dist/expr-validator.umd.cjs",
-      "types": "./dist/expr-validator.d.ts"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.cjs"
     }
   },
+  "main": "./dist/cjs/index.cjs",
+  "types": "./dist/cjs/index.d.cts",
+  "files": [
+    "src",
+    "dist"
+  ],
   "scripts": {
-    "dev": "vite build -w",
-    "build": "vite build"
+    "build": "tsup"
   },
   "keywords": [
     "validator",
@@ -30,7 +28,10 @@
     "expr-validator",
     "expression-validator"
   ],
-  "author": "openorson<openorson@hotmail.com>",
+  "author": "openorson",
+  "repository": {
+    "url": "https://github.com/openorson/expr-validator.git"
+  },
   "license": "ISC",
   "dependencies": {
     "validator": "^13.11.0"
@@ -38,8 +39,8 @@
   "devDependencies": {
     "@types/node": "^20.6.0",
     "@types/validator": "^13.11.1",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.9",
-    "vite-plugin-dts": "^3.5.3"
+    "terser": "^5.19.4",
+    "tsup": "^7.2.0",
+    "typescript": "^5.2.2"
   }
 }
