--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup"
+    "build": "tsup",
+    "test": "vitest"
   },
   "keywords": [
     "validator",
@@ -41,6 +42,7 @@
     "@types/validator": "^13.11.1",
     "terser": "^5.19.4",
     "tsup": "^7.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.4"
   }
 }
