feat: 玩命开发中...

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "main": "./dist/cjs/index.cjs",
   "types": "./dist/cjs/index.d.cts",
   "files": [
+    "src",
     "dist"
   ],
   "scripts": {
